[gd_scene load_steps=9 format=3 uid="uid://b001tvur7jlkr"]

[ext_resource type="Script" path="res://player/character.gd" id="1_pyvvx"]
[ext_resource type="Texture2D" uid="uid://ba6q8s83isana" path="res://art/crab.png" id="2_f4qvb"]
[ext_resource type="PackedScene" uid="uid://kf8tqdlm8c5t" path="res://addons/vision_cone_2d/vision_cone_2d_template.tscn" id="3_lt0ua"]
[ext_resource type="Script" path="res://simulation/simulated_hit/simulated_hit.gd" id="5_k00w1"]
[ext_resource type="Script" path="res://player/player_input.gd" id="5_ricxg"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vsdfj"]
radius = 9.09091
height = 39.3939

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7jikk"]
size = Vector2(10.2572, 26.0023)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8jrak"]
size = Vector2(2.99946, 4)

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_mask = 9
script = ExtResource("1_pyvvx")

[node name="PlayerSprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-5, 0)
rotation = -1.5708
scale = Vector2(0.66, 0.66)
texture = ExtResource("2_f4qvb")

[node name="VisionCone2D" parent="." instance=ExtResource("3_lt0ua")]
rotation = -1.5708
angle_deg = 60
ray_count = 50
collision_layer_mask = 8
debug_shape = true

[node name="VisionConeRenderer" parent="VisionCone2D" index="0"]
color = Color(0.431373, 0.929412, 0.278431, 0)

[node name="PlayerCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(-3, -5.96046e-08)
scale = Vector2(0.66, 0.66)
shape = SubResource("CapsuleShape2D_vsdfj")

[node name="Torso" type="StaticBody2D" parent="." groups=["player"]]
collision_layer = 2
collision_mask = 0
collision_priority = 2.0

[node name="TorsoShape" type="CollisionShape2D" parent="Torso"]
position = Vector2(-2.87137, 0.000310926)
rotation = 0.00241721
shape = SubResource("RectangleShape2D_7jikk")
debug_color = Color(0.631373, 0.027451, 0.372549, 0.419608)

[node name="Head" type="StaticBody2D" parent="." groups=["player"]]
collision_layer = 2
collision_mask = 0
collision_priority = 2.0

[node name="HeadShape" type="CollisionShape2D" parent="Head"]
position = Vector2(-6, 1.19209e-07)
rotation = -0.000538441
shape = SubResource("RectangleShape2D_8jrak")

[node name="DeathParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 30
lifetime = 0.5
one_shot = true
explosiveness = 1.0
randomness = 0.3
lifetime_randomness = 0.3
emission_shape = 3
emission_rect_extents = Vector2(1, 1)
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 160.0
initial_velocity_max = 200.0
scale_amount_min = 2.0
scale_amount_max = 2.0
color = Color(0.968627, 0, 0.215686, 1)
script = ExtResource("5_k00w1")

[node name="PlayerInput" type="Node2D" parent="."]
script = ExtResource("5_ricxg")

[editable path="VisionCone2D"]
